Fixed missing styling that made table revert to default styling on Firefox

--- a/src/briefing/topics/winrate/winrate.scss
+++ b/src/briefing/topics/winrate/winrate.scss
@@ -1,6 +1,11 @@
 table {
 	width: 100%;
 	table-layout: fixed;
+	// Set font-weight and -size specifically.
+	// Otherwise Firefox's default styling screws us over.
+	// See https://stackoverflow.com/questions/3388705/why-is-a-table-not-using-the-body-font-size-even-though-i-havent-set-the-table
+	font-weight: inherit;
+	font-size: inherit;
 }
 
 th {
